# first-saas-app

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/commando/management/commands/: hello_world.py  vendor_pull.py
src/helpers/: downloader.py
src/home/: settings.py  urls.py  views.py
src/templates/: base.html  home.html
src/visits/: models.py
src/visits/migrations/: 0001_initial.py
